Change Paths.get to Paath.of